# Nebulae

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/shaders/: Basic.hlsl  BasicRt.hlsl  basic_pbr.hlsl  brdf.hlsli  deferred_gbuffers.hlsl  deferred_pbr.hlsl  fullscreen_triangle.hlsli  fullscreen_triangle_vs.hlsl  octahedron_encoding.hlsli  pathtracer.hlsl  pathtracer_utils.hlsli  radiance_resolve.hlsl  rand.hlsli  sun_disk_sampling.hlsli  svgf_atrous.hlsl  svgf_common.hlsli  svgf_temporal.hlsl  tonemapping.hlsl
src/: ArgumentParser.h  DeferredRenderer.cpp  DeferredRenderer.h  Nebulae.cpp  Nebulae.h  Raytracer.cpp  Raytracer.h  Renderer.cpp  Renderer.h  SVGFDenoiser.cpp  SVGFDenoiser.h  Win.h  WinMain.cpp
src/Raytracing/: NRIDescriptorHeap.cpp  NRIDescriptorHeap.h  NRIManager.cpp  NRIManager.h  RayTracer.cpp  RayTracer.h  Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  stdafx.h
src/common/: Assert.h  Configuration.h  Defines.h  Log.cpp  Log.h  TimeWatch.h
src/core/: GLTFScene.cpp  GLTFScene.h  GLTFSceneImporter.cpp  GLTFSceneImporter.h  InspectCamera.h  Math.h  Scene.cpp  Scene.h
src/input/: InputCallback.h  InputManager.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/nri/: CommandAllocatorPool.cpp  CommandAllocatorPool.h  ConstantBuffer.cpp  ConstantBuffer.h  DepthStencilBuffer.cpp  DepthStencilBuffer.h  DescriptorAllocation.cpp  DescriptorAllocation.h  DescriptorHeap.cpp  DescriptorHeap.h  DescriptorHeapAllocation.h  Device.cpp  Device.h  GIProcessedScene.cpp  GIProcessedScene.h  Manager.cpp  Manager.h  Material.h  PIXRuntime.h  RootSignature.cpp  RootSignature.h  Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  StaticMesh.h  Swapchain.cpp  Swapchain.h  stdafx.h
src/nri/imgui/: UiContext.cpp  UiContext.h
src/nri/nvidia/: NsightAftermathCrashTracker.cpp  NsightAftermathCrashTracker.h  NsightAftermathHelpers.h  NvApi.cpp  NvApi.h  NvRtxgiNRC.cpp  NvRtxgiNRC.h
src/nri/raytracing/: RTAccelerationStructureBuilder.cpp  RTAccelerationStructureBuilder.h  RTCommon.h  RTDescriptorArray.h  RTPipeline.cpp  RTPipeline.h  RTScene.cpp  RTScene.h
src/util/: File.h  Memory.h  ScopedPointer.h  Types.h
